--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "examen_u2",
+  "name": "dwap2-unda-anthony",
   "version": "1.0.0",
   "description": "Examen unidad 2",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "web",
     "server"
   ],
-  "author": "Anthony Unda",
+  "author": "Unda Anthony",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "hbs": "^4.1.2"
   }
 }
